# go-algorand-grpc-sdk

./: BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum
client/: BUILD.bazel  client.go  encoding.go  types.go
client/internal/proto/: BUILD.bazel  service.pb.go
examples/client/: BUILD.bazel  main.go
types/: BUILD.bazel  account_data.go  applications.go  asset.go  basics.go
