load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:private"])

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/tolikzinovyev/go-algorand-grpc-sdk/examples/client",
    deps = [
        "//client",
        "//types",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
)
